--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 !/.idea/icd0019test0.iml
 !/.idea/modules.xml
 
-!/lib/hamcrest-all-1.3.jar
-!/lib/junit-4.12.jar
+!/lib/assertj-core-3.27.3.jar
+!/lib/junit-platform-console-standalone-1.11.4.jar
 
 !monitor.jar
